* fix local file script call * stop any unnecessary scraping of subscene